// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`doGenerate > reasoning-gemini3 > should extract reasoning with thoughtSignature 1`] = `
{
  "content": [
    {
      "providerMetadata": undefined,
      "text": "I need to count the letter "r" in "strawberry". Let me spell it out: s-t-r-a-w-b-e-r-r-y. That gives us 3 "r"s.

",
      "type": "reasoning",
    },
    {
      "providerMetadata": {
        "google": {
          "thoughtSignature": "Er8ICrwIAb4+9vvLcB/BVG275p0VJoifW0goXgxLuI2DzElGAKOVOdOdZ7QthhadADy6IGXVWLIqoF9GU1laBWe/7kyOKXpWOLm/lz0lOpmcCOegHiIfs70qs5A6DRTMWsF3pATArurU1ysMF/EQ4hCGRtOmXpZRxei5yKxMlJ0eQKfZtekmf9igQ2zyw+737vT1TC6vWZa981Ere7Z9KubTSbDG0M2j8Ll6OV4BQsXY5viAZP91WeGypFaOt0Rs/X9i9vVLpDj5gndgsxD0jPTN5+XMDQ5V1D4E5fGUaw/6rIoGvlZZBtgK3SHpM6YaQCtA11NyOqG94nrhKcPjr/ElSd4R50V4bTm9EAYYk1nmzoHWYzBlhv8KJHl6A4AayKOFvb0crgATUbq8l9o3jAmq/6wxLJefEYyejWCovlJGezIZ2gchvAlya+IXdSW7OJMeSeQ+NNireODtQqpFoG59B0RJUN0rB88eX2KM1FXgQFDLVg8YYBWIwYdqR8MERZdQLfREHp0bRraO6rYot8jrgbQ9a9ulwtAJtvecqZ7vhoFACfbKTnbNlWRSjy8dW5FYY+fDbUpNUOurjFl/yXBZokuSQtXLCdQ8jFsu8cZfoyJswB6s3IySxiCsUtotp5GpIxoKspPC9ZcAtI4FDSbu2j8KwvNXPUQgnC5PZJKEDUtQnvHDkCkv0eFVDczr0rSUA+pzfd3c2Qe/7tHhM6h/cd0Lqq7Lfwg4MAgxnNtRpNq8cHD+4hP8f94J4Z6smiXHKipuO3eZknnUdI01EVPP29Z9tOniW9MSCp0BSApMpUkruYoMZE46t1prkBRusFERkKqLFSPSjbiLVCJ9srcJYVAD2SPMRhYgUTQxvY5AOG9mDxao836HEdR6ZPPxDkRd/DK4kKctyZvqLKIf2mcmhSG0/0hp52av8ESAFoz0fKuJ5HPAeb2xm6oHLckX7vT+Zh3Zu20QRV0q+U2q3hopihrJugXBhk8nxJX0mcKUJ0cDYIhcIgurCld3CvwE749Jv4Yzs6O86AXBEIOY9M+r6L4j7MzNGlejzYl/l02u1nIfOGtQK79U43dJj9T7Lx+9YeFUL4JIT1t3KOh8oZp9KGiAuIO1wyCArsTUuHjW7TyD9o4YK4G6AxwGYGY7Z1cQ8hT/tSYTDYE6TuJXiXKzqHNZW4wt5NdQEDI8rn8b+DAxh+V9ADzeL6JZs3qSBTFLqAJwZVLd5st6PbSQu+beh4/psmOCGXnXqf0lzuPWrMHV/BgXPxkpt5eRf0eisMNFMMFKhyYrIYi+msOk/lx6Lnb1WAEv/PfLiJUI6HwVtEwkufh4HAzif0vg0vXNnUSFVM54j0V7RadU1qmoskOSUpC5WxsWe0KjZ+weQM4Hy/881CWq4mveYpZ3UBP5V5Ma09ytzEAj0UZZifGiKGDOKEOAAPazau7p1U8KVNoarw==",
        },
      },
      "text": "There are **3** "r"s in the word "strawberry".

Here is the breakdown: st**r**awbe**rr**y.",
      "type": "text",
    },
  ],
  "finishReason": {
    "raw": "STOP",
    "unified": "stop",
  },
  "providerMetadata": {
    "google": {
      "groundingMetadata": null,
      "promptFeedback": null,
      "safetyRatings": null,
      "urlContextMetadata": null,
      "usageMetadata": {
        "candidatesTokenCount": 32,
        "promptTokenCount": 14,
        "thoughtsTokenCount": 351,
        "totalTokenCount": 397,
      },
    },
  },
  "request": {
    "body": {
      "cachedContent": undefined,
      "contents": [
        {
          "parts": [
            {
              "text": "Hello",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "frequencyPenalty": undefined,
        "maxOutputTokens": undefined,
        "presencePenalty": undefined,
        "responseMimeType": undefined,
        "responseModalities": undefined,
        "responseSchema": undefined,
        "seed": undefined,
        "stopSequences": undefined,
        "temperature": undefined,
        "thinkingConfig": undefined,
        "topK": undefined,
        "topP": undefined,
      },
      "labels": undefined,
      "safetySettings": undefined,
      "systemInstruction": undefined,
      "toolConfig": undefined,
      "tools": undefined,
    },
  },
  "response": {
    "body": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": "I need to count the letter "r" in "strawberry". Let me spell it out: s-t-r-a-w-b-e-r-r-y. That gives us 3 "r"s.

",
                "thought": true,
              },
              {
                "text": "There are **3** "r"s in the word "strawberry".

Here is the breakdown: st**r**awbe**rr**y.",
                "thoughtSignature": "Er8ICrwIAb4+9vvLcB/BVG275p0VJoifW0goXgxLuI2DzElGAKOVOdOdZ7QthhadADy6IGXVWLIqoF9GU1laBWe/7kyOKXpWOLm/lz0lOpmcCOegHiIfs70qs5A6DRTMWsF3pATArurU1ysMF/EQ4hCGRtOmXpZRxei5yKxMlJ0eQKfZtekmf9igQ2zyw+737vT1TC6vWZa981Ere7Z9KubTSbDG0M2j8Ll6OV4BQsXY5viAZP91WeGypFaOt0Rs/X9i9vVLpDj5gndgsxD0jPTN5+XMDQ5V1D4E5fGUaw/6rIoGvlZZBtgK3SHpM6YaQCtA11NyOqG94nrhKcPjr/ElSd4R50V4bTm9EAYYk1nmzoHWYzBlhv8KJHl6A4AayKOFvb0crgATUbq8l9o3jAmq/6wxLJefEYyejWCovlJGezIZ2gchvAlya+IXdSW7OJMeSeQ+NNireODtQqpFoG59B0RJUN0rB88eX2KM1FXgQFDLVg8YYBWIwYdqR8MERZdQLfREHp0bRraO6rYot8jrgbQ9a9ulwtAJtvecqZ7vhoFACfbKTnbNlWRSjy8dW5FYY+fDbUpNUOurjFl/yXBZokuSQtXLCdQ8jFsu8cZfoyJswB6s3IySxiCsUtotp5GpIxoKspPC9ZcAtI4FDSbu2j8KwvNXPUQgnC5PZJKEDUtQnvHDkCkv0eFVDczr0rSUA+pzfd3c2Qe/7tHhM6h/cd0Lqq7Lfwg4MAgxnNtRpNq8cHD+4hP8f94J4Z6smiXHKipuO3eZknnUdI01EVPP29Z9tOniW9MSCp0BSApMpUkruYoMZE46t1prkBRusFERkKqLFSPSjbiLVCJ9srcJYVAD2SPMRhYgUTQxvY5AOG9mDxao836HEdR6ZPPxDkRd/DK4kKctyZvqLKIf2mcmhSG0/0hp52av8ESAFoz0fKuJ5HPAeb2xm6oHLckX7vT+Zh3Zu20QRV0q+U2q3hopihrJugXBhk8nxJX0mcKUJ0cDYIhcIgurCld3CvwE749Jv4Yzs6O86AXBEIOY9M+r6L4j7MzNGlejzYl/l02u1nIfOGtQK79U43dJj9T7Lx+9YeFUL4JIT1t3KOh8oZp9KGiAuIO1wyCArsTUuHjW7TyD9o4YK4G6AxwGYGY7Z1cQ8hT/tSYTDYE6TuJXiXKzqHNZW4wt5NdQEDI8rn8b+DAxh+V9ADzeL6JZs3qSBTFLqAJwZVLd5st6PbSQu+beh4/psmOCGXnXqf0lzuPWrMHV/BgXPxkpt5eRf0eisMNFMMFKhyYrIYi+msOk/lx6Lnb1WAEv/PfLiJUI6HwVtEwkufh4HAzif0vg0vXNnUSFVM54j0V7RadU1qmoskOSUpC5WxsWe0KjZ+weQM4Hy/881CWq4mveYpZ3UBP5V5Ma09ytzEAj0UZZifGiKGDOKEOAAPazau7p1U8KVNoarw==",
              },
            ],
            "role": "model",
          },
          "finishReason": "STOP",
          "index": 0,
        },
      ],
      "modelVersion": "gemini-3-pro-preview",
      "responseId": "UGyLaZiZCcq2mtkPv8bB8AQ",
      "usageMetadata": {
        "candidatesTokenCount": 32,
        "promptTokenCount": 14,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 14,
          },
        ],
        "thoughtsTokenCount": 351,
        "totalTokenCount": 397,
      },
    },
    "headers": {
      "content-length": "2071",
      "content-type": "application/json",
    },
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 14,
      "total": 14,
    },
    "outputTokens": {
      "reasoning": 351,
      "text": 32,
      "total": 383,
    },
    "raw": {
      "candidatesTokenCount": 32,
      "promptTokenCount": 14,
      "thoughtsTokenCount": 351,
      "totalTokenCount": 397,
    },
  },
  "warnings": [],
}
`;

exports[`doGenerate > text > should extract text response 1`] = `
{
  "content": [
    {
      "providerMetadata": undefined,
      "text": "## Lumina Day - A Celebration of Inner Light and Shared Kindness (Observed annually on the Winter Solstice)

**Core Concept:** Lumina Day is a secular holiday dedicated to recognizing and nurturing the inner light within oneself and others, especially during the darkest time of the year. It's a celebration of resilience, empathy, and the shared human experience, meant to combat winter blues and promote community connection.

**Date:** Winter Solstice (December 21st in the Northern Hemisphere)

**Symbols:**

*   **Candles & Lights:** Represent the individual "lumina" (inner light) that each person carries.
*   **Mirrors:** Symbolize self-reflection and acknowledging one's own strengths and vulnerabilities.
*   **Seeds:** Represent potential and the promise of growth, even in the darkest times.
*   **The "Lumina Knot":** A simple knot tied from various colored strings, each color representing a different value: kindness",
      "type": "text",
    },
  ],
  "finishReason": {
    "raw": "MAX_TOKENS",
    "unified": "length",
  },
  "providerMetadata": {
    "google": {
      "groundingMetadata": null,
      "promptFeedback": null,
      "safetyRatings": null,
      "urlContextMetadata": null,
      "usageMetadata": {
        "candidatesTokenCount": 200,
        "promptTokenCount": 9,
        "totalTokenCount": 209,
      },
    },
  },
  "request": {
    "body": {
      "cachedContent": undefined,
      "contents": [
        {
          "parts": [
            {
              "text": "Hello",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "frequencyPenalty": undefined,
        "maxOutputTokens": undefined,
        "presencePenalty": undefined,
        "responseMimeType": undefined,
        "responseModalities": undefined,
        "responseSchema": undefined,
        "seed": undefined,
        "stopSequences": undefined,
        "temperature": undefined,
        "thinkingConfig": undefined,
        "topK": undefined,
        "topP": undefined,
      },
      "labels": undefined,
      "safetySettings": undefined,
      "systemInstruction": undefined,
      "toolConfig": undefined,
      "tools": undefined,
    },
  },
  "response": {
    "body": {
      "candidates": [
        {
          "avgLogprobs": -0.5192837905883789,
          "content": {
            "parts": [
              {
                "text": "## Lumina Day - A Celebration of Inner Light and Shared Kindness (Observed annually on the Winter Solstice)

**Core Concept:** Lumina Day is a secular holiday dedicated to recognizing and nurturing the inner light within oneself and others, especially during the darkest time of the year. It's a celebration of resilience, empathy, and the shared human experience, meant to combat winter blues and promote community connection.

**Date:** Winter Solstice (December 21st in the Northern Hemisphere)

**Symbols:**

*   **Candles & Lights:** Represent the individual "lumina" (inner light) that each person carries.
*   **Mirrors:** Symbolize self-reflection and acknowledging one's own strengths and vulnerabilities.
*   **Seeds:** Represent potential and the promise of growth, even in the darkest times.
*   **The "Lumina Knot":** A simple knot tied from various colored strings, each color representing a different value: kindness",
              },
            ],
            "role": "model",
          },
          "finishReason": "MAX_TOKENS",
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "fGmLafr0OaSHqtsPoKHz8Ao",
      "usageMetadata": {
        "candidatesTokenCount": 200,
        "candidatesTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 200,
          },
        ],
        "promptTokenCount": 9,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 9,
          },
        ],
        "totalTokenCount": 209,
      },
    },
    "headers": {
      "content-length": "1360",
      "content-type": "application/json",
    },
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 9,
      "total": 9,
    },
    "outputTokens": {
      "reasoning": 0,
      "text": 200,
      "total": 200,
    },
    "raw": {
      "candidatesTokenCount": 200,
      "promptTokenCount": 9,
      "totalTokenCount": 209,
    },
  },
  "warnings": [],
}
`;

exports[`doGenerate > text > should extract usage 1`] = `
{
  "inputTokens": {
    "cacheRead": 0,
    "cacheWrite": undefined,
    "noCache": 9,
    "total": 9,
  },
  "outputTokens": {
    "reasoning": 0,
    "text": 200,
    "total": 200,
  },
  "raw": {
    "candidatesTokenCount": 200,
    "promptTokenCount": 9,
    "totalTokenCount": 209,
  },
}
`;

exports[`doGenerate > tool-call > should extract tool calls 1`] = `
{
  "content": [
    {
      "input": "{"location":"San Francisco"}",
      "providerMetadata": undefined,
      "toolCallId": "test-id",
      "toolName": "weather",
      "type": "tool-call",
    },
  ],
  "finishReason": {
    "raw": "STOP",
    "unified": "tool-calls",
  },
  "providerMetadata": {
    "google": {
      "groundingMetadata": null,
      "promptFeedback": null,
      "safetyRatings": null,
      "urlContextMetadata": null,
      "usageMetadata": {
        "candidatesTokenCount": 4,
        "promptTokenCount": 26,
        "totalTokenCount": 30,
      },
    },
  },
  "request": {
    "body": {
      "cachedContent": undefined,
      "contents": [
        {
          "parts": [
            {
              "text": "Hello",
            },
          ],
          "role": "user",
        },
      ],
      "generationConfig": {
        "frequencyPenalty": undefined,
        "maxOutputTokens": undefined,
        "presencePenalty": undefined,
        "responseMimeType": undefined,
        "responseModalities": undefined,
        "responseSchema": undefined,
        "seed": undefined,
        "stopSequences": undefined,
        "temperature": undefined,
        "thinkingConfig": undefined,
        "topK": undefined,
        "topP": undefined,
      },
      "labels": undefined,
      "safetySettings": undefined,
      "systemInstruction": undefined,
      "toolConfig": undefined,
      "tools": [
        {
          "functionDeclarations": [
            {
              "description": "",
              "name": "weather",
              "parameters": {
                "properties": {
                  "location": {
                    "type": "string",
                  },
                },
                "required": [
                  "location",
                ],
                "type": "object",
              },
            },
          ],
        },
      ],
    },
  },
  "response": {
    "body": {
      "candidates": [
        {
          "avgLogprobs": -0.0000394245216739364,
          "content": {
            "parts": [
              {
                "functionCall": {
                  "args": {
                    "location": "San Francisco",
                  },
                  "name": "weather",
                },
              },
            ],
            "role": "model",
          },
          "finishReason": "STOP",
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "k2mLafruFb-bqtsPqZzu2Qo",
      "usageMetadata": {
        "candidatesTokenCount": 4,
        "candidatesTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 4,
          },
        ],
        "promptTokenCount": 26,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 26,
          },
        ],
        "totalTokenCount": 30,
      },
    },
    "headers": {
      "content-length": "468",
      "content-type": "application/json",
    },
  },
  "usage": {
    "inputTokens": {
      "cacheRead": 0,
      "cacheWrite": undefined,
      "noCache": 26,
      "total": 26,
    },
    "outputTokens": {
      "reasoning": 0,
      "text": 4,
      "total": 4,
    },
    "raw": {
      "candidatesTokenCount": 4,
      "promptTokenCount": 26,
      "totalTokenCount": 30,
    },
  },
  "warnings": [],
}
`;

exports[`doStream > reasoning > should stream reasoning and text parts 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "0",
    "providerMetadata": undefined,
    "type": "reasoning-start",
  },
  {
    "delta": "I need to count the letter "r" in "strawberry".

",
    "id": "0",
    "providerMetadata": undefined,
    "type": "reasoning-delta",
  },
  {
    "delta": "s-t-r-a-w-b-e-r-r-y. I count 3 r's.

",
    "id": "0",
    "providerMetadata": undefined,
    "type": "reasoning-delta",
  },
  {
    "id": "0",
    "type": "reasoning-end",
  },
  {
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-start",
  },
  {
    "delta": "There are **3** "r"s in the word "strawberry",
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": "".",
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "id": "1",
    "type": "text-end",
  },
  {
    "finishReason": {
      "raw": "STOP",
      "unified": "stop",
    },
    "providerMetadata": {
      "google": {
        "groundingMetadata": null,
        "promptFeedback": null,
        "safetyRatings": null,
        "urlContextMetadata": null,
        "usageMetadata": {
          "candidatesTokenCount": 13,
          "promptTokenCount": 14,
          "thoughtsTokenCount": 151,
          "totalTokenCount": 178,
        },
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 14,
        "total": 14,
      },
      "outputTokens": {
        "reasoning": 151,
        "text": 13,
        "total": 164,
      },
      "raw": {
        "candidatesTokenCount": 13,
        "promptTokenCount": 14,
        "thoughtsTokenCount": 151,
        "totalTokenCount": 178,
      },
    },
  },
]
`;

exports[`doStream > reasoning-gemini3 > should stream reasoning with thoughtSignature 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "0",
    "providerMetadata": undefined,
    "type": "reasoning-start",
  },
  {
    "delta": "I need to count the letter "r" in "strawberry". Let me spell it out: s-t-r-a-w-b-e-r-r-y.

",
    "id": "0",
    "providerMetadata": undefined,
    "type": "reasoning-delta",
  },
  {
    "id": "0",
    "type": "reasoning-end",
  },
  {
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-start",
  },
  {
    "delta": "There are **3** "r"s in the",
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " word "strawberry".

Here is the breakdown: st**r**awbe**rr**y.",
    "id": "1",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "id": "1",
    "type": "text-end",
  },
  {
    "finishReason": {
      "raw": "STOP",
      "unified": "stop",
    },
    "providerMetadata": {
      "google": {
        "groundingMetadata": null,
        "promptFeedback": null,
        "safetyRatings": null,
        "urlContextMetadata": null,
        "usageMetadata": {
          "candidatesTokenCount": 32,
          "promptTokenCount": 14,
          "thoughtsTokenCount": 260,
          "totalTokenCount": 306,
        },
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 14,
        "total": 14,
      },
      "outputTokens": {
        "reasoning": 260,
        "text": 32,
        "total": 292,
      },
      "raw": {
        "candidatesTokenCount": 32,
        "promptTokenCount": 14,
        "thoughtsTokenCount": 260,
        "totalTokenCount": 306,
      },
    },
  },
]
`;

exports[`doStream > text > should include raw chunks when includeRawChunks is enabled 1`] = `
[
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": "##",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " Seed",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " & Song Day - Celebrated on the Vernal Equinox

**Purpose:** Seed",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " & Song Day is a celebration of renewal, potential, and the vibrant interconnectedness of all",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " living things. It marks the official start of spring and encourages individuals and communities to actively participate in the cycle of growth and create beauty in the world.

**Traditions",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": ":**

*   **The Seed Exchange:** The heart of Seed & Song Day is the Seed Exchange. Communities gather in public parks, town squares, or even",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " private gardens to share seeds, seedlings, and gardening knowledge. This exchange focuses on native plants, heirloom varieties, and seeds that are particularly well-suited to the local climate. Participants bring seeds they've saved from the previous year, labeled",
              },
            ],
            "role": "model",
          },
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "promptTokenCount": 10,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 10,
          },
        ],
        "totalTokenCount": 10,
      },
    },
    "type": "raw",
  },
  {
    "rawValue": {
      "candidates": [
        {
          "content": {
            "parts": [
              {
                "text": " and packaged, and swap them with others. Newcomers are welcomed and encouraged to learn the basics of seed saving and planting. This tradition fosters a sense of community, promotes biodiversity, and connects people to the natural world.

*   **The",
              },
            ],
            "role": "model",
          },
          "finishReason": "MAX_TOKENS",
        },
      ],
      "modelVersion": "gemini-2.0-flash",
      "responseId": "ymmLabjHPMKE1PIPpJeV6Ac",
      "usageMetadata": {
        "candidatesTokenCount": 200,
        "candidatesTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 200,
          },
        ],
        "promptTokenCount": 9,
        "promptTokensDetails": [
          {
            "modality": "TEXT",
            "tokenCount": 9,
          },
        ],
        "totalTokenCount": 209,
      },
    },
    "type": "raw",
  },
]
`;

exports[`doStream > text > should stream text deltas 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-start",
  },
  {
    "delta": "##",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " Seed",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " & Song Day - Celebrated on the Vernal Equinox

**Purpose:** Seed",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " & Song Day is a celebration of renewal, potential, and the vibrant interconnectedness of all",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " living things. It marks the official start of spring and encourages individuals and communities to actively participate in the cycle of growth and create beauty in the world.

**Traditions",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": ":**

*   **The Seed Exchange:** The heart of Seed & Song Day is the Seed Exchange. Communities gather in public parks, town squares, or even",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " private gardens to share seeds, seedlings, and gardening knowledge. This exchange focuses on native plants, heirloom varieties, and seeds that are particularly well-suited to the local climate. Participants bring seeds they've saved from the previous year, labeled",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "delta": " and packaged, and swap them with others. Newcomers are welcomed and encouraged to learn the basics of seed saving and planting. This tradition fosters a sense of community, promotes biodiversity, and connects people to the natural world.

*   **The",
    "id": "0",
    "providerMetadata": undefined,
    "type": "text-delta",
  },
  {
    "id": "0",
    "type": "text-end",
  },
  {
    "finishReason": {
      "raw": "MAX_TOKENS",
      "unified": "length",
    },
    "providerMetadata": {
      "google": {
        "groundingMetadata": null,
        "promptFeedback": null,
        "safetyRatings": null,
        "urlContextMetadata": null,
        "usageMetadata": {
          "candidatesTokenCount": 200,
          "promptTokenCount": 9,
          "totalTokenCount": 209,
        },
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 9,
        "total": 9,
      },
      "outputTokens": {
        "reasoning": 0,
        "text": 200,
        "total": 200,
      },
      "raw": {
        "candidatesTokenCount": 200,
        "promptTokenCount": 9,
        "totalTokenCount": 209,
      },
    },
  },
]
`;

exports[`doStream > tool-call > should stream tool call 1`] = `
[
  {
    "type": "stream-start",
    "warnings": [],
  },
  {
    "id": "test-id",
    "providerMetadata": undefined,
    "toolName": "weather",
    "type": "tool-input-start",
  },
  {
    "delta": "{"location":"San Francisco"}",
    "id": "test-id",
    "providerMetadata": undefined,
    "type": "tool-input-delta",
  },
  {
    "id": "test-id",
    "providerMetadata": undefined,
    "type": "tool-input-end",
  },
  {
    "input": "{"location":"San Francisco"}",
    "providerMetadata": undefined,
    "toolCallId": "test-id",
    "toolName": "weather",
    "type": "tool-call",
  },
  {
    "finishReason": {
      "raw": "STOP",
      "unified": "tool-calls",
    },
    "providerMetadata": {
      "google": {
        "groundingMetadata": null,
        "promptFeedback": null,
        "safetyRatings": null,
        "urlContextMetadata": null,
        "usageMetadata": {
          "candidatesTokenCount": 4,
          "promptTokenCount": 26,
          "totalTokenCount": 30,
        },
      },
    },
    "type": "finish",
    "usage": {
      "inputTokens": {
        "cacheRead": 0,
        "cacheWrite": undefined,
        "noCache": 26,
        "total": 26,
      },
      "outputTokens": {
        "reasoning": 0,
        "text": 4,
        "total": 4,
      },
      "raw": {
        "candidatesTokenCount": 4,
        "promptTokenCount": 26,
        "totalTokenCount": 30,
      },
    },
  },
]
`;
